Docs: add integrated terminal basics vscode

--- a/src/pages/software/vscode.mdx
+++ b/src/pages/software/vscode.mdx
@@ -25,6 +25,10 @@ Do you often feel like you are clicking your mouse too much in vscode? Materials
 
 Help with boring tasks
 
+## Terminal
+
+- [Official article basics of integrated terminal](https://code.visualstudio.com/docs/terminal/basics)
+
 ### Faster coding
 
 #### Bracket Select
