Style: use prettier on all files

--- a/src/pages/software/vscode.mdx
+++ b/src/pages/software/vscode.mdx
@@ -113,7 +113,7 @@ Our template for this extension
 
 [Explanation why you might need this extension: Git materials - bewebdev.tech](https://bewebdev.tech/technologies/git#write-good-commit-messages)
 
-import { configForGitMessageExtenstion } from '../../data/vscode.data.ts';
+import { configForGitMessageExtenstion } from '../../data/vscode.data.ts'
 
 <details>
 	<summary>View our template</summary>
