Feat: add better description for visual studio code materials

--- a/src/pages/software/vscode.mdx
+++ b/src/pages/software/vscode.mdx
@@ -1,6 +1,6 @@
 ---
 title: Visual Studio Code
-description: Visual Studio Code materials
+description: Visual Studio Code materials. Productivity tips, useful extensions and templates
 layout: ../../layouts/MainLayout.astro
 ---
 
