--- a/src/pages/software/vscode.mdx
+++ b/src/pages/software/vscode.mdx
@@ -21,13 +21,13 @@ Do you often feel like you are clicking your mouse too much in vscode? Materials
 
 - [How to enable inlay hints on key hold on YouTube](https://www.youtube.com/watch?v=uvrIFZYW7eg)
 
+## Terminal
+
+- [Official article about basics of integrated terminal](https://code.visualstudio.com/docs/terminal/basics)
+
 ## Extensions
 
 Help with boring tasks
-
-## Terminal
-
-- [Official article basics of integrated terminal](https://code.visualstudio.com/docs/terminal/basics)
 
 ### Faster coding
 
