Fix: add missing closing tag for details in vscode materials

--- a/src/pages/software/vscode.mdx
+++ b/src/pages/software/vscode.mdx
@@ -122,3 +122,4 @@ import { configForGitMessageExtenstion } from '../../data/vscode.data.ts'
 <details>
 	<summary>View our template</summary>
 	<pre class='astro-code'>{configForGitMessageExtenstion}</pre>
+</details>
