Docs: add Hr resources #111

--- a/src/pages/resources/test_your_skills.mdx
+++ b/src/pages/resources/test_your_skills.mdx
@@ -23,6 +23,7 @@ import CSSQuestions from './_questions/css.md'
 - [Lydia Hallie - JavaScript Questions with answers](https://github.com/lydiahallie/javascript-questions)
 - [BFE.dev - prepare for Front-End job interviews](https://bigfrontend.dev/)
 - [Wes Bos - JavaScript 30 - build 30 small projects/apps](https://javascript30.com/)
+- [JavaScrit interview questions - List of ~ 400 questions on GitHub](https://github.com/sudheerj/javascript-interview-questions)
 
 import JavaScriptQuestions from './_questions/javascript.md'
 
