Docs: fix Other resources section refactor #82

--- a/src/pages/software/vscode.mdx
+++ b/src/pages/software/vscode.mdx
@@ -11,6 +11,7 @@ Do you often feel like you are clicking your mouse too much in vscode? Materials
 - [Official Visual Studio Code custom snippets tutorial](https://code.visualstudio.com/docs/editor/userdefinedsnippets)
 - [Official Visual Studio Code productivity tips](https://code.visualstudio.com/docs/introvideos/productivity)
 - [Emmet Cheetsheet - write HTML and CSS with ease](https://docs.emmet.io/cheat-sheet/)
+- [Fireship - 25 VS Code Productivity Tips and Speed Hacks](https://www.youtube.com/watch?v=ifTF3ags0XI)
 - Hotkeys Reference
 
   - [Windows](https://code.visualstudio.com/shortcuts/keyboard-shortcuts-windows.pdf)
@@ -18,7 +19,6 @@ Do you often feel like you are clicking your mouse too much in vscode? Materials
   - [Linux](https://code.visualstudio.com/shortcuts/keyboard-shortcuts-linux.pdf)
 
 - [Official article about inlay hints](https://code.visualstudio.com/docs/typescript/typescript-editing)
-
 - [How to enable inlay hints on key hold on YouTube](https://www.youtube.com/watch?v=uvrIFZYW7eg)
 
 ## Terminal
