Feat: add the mocked interview sections

--- a/src/pages/resources/test_your_skills.mdx
+++ b/src/pages/resources/test_your_skills.mdx
@@ -4,6 +4,17 @@ description: The best way to cement your skill is to test your knowledge in prac
 layout: ../../layouts/MainLayout.astro
 ---
 
+## Mocked interview
+
+- [Conner Ardman - React Coding Interview Ft. Clément Mihailescu (build the wordle clone)](https://www.youtube.com/watch?v=5xf4_Kx7azg)
+  - [Used API (if someone wants to recreate the task)](https://api.frontendexpert.io/api/fe/wordle-words)
+
+## Mocked interview in Polish
+
+- [Jak zacząć programować? - Junior frontend developer - rozmowa o pracę!](https://www.youtube.com/watch?v=g3VKD_voy0g)
+- [Jak zacząć programować? - Regular / Mid front-end developer - rozmowa o pracę!](https://www.youtube.com/watch?v=ecsxxHqeczg)
+- [Jak zacząć programować? - Kolejna rozmowa rekrutacyjna! Mid / Regular JavaScript developer](https://www.youtube.com/watch?v=kBO0MQ_pfSk)
+
 ## HTML & CSS
 
 import CSS4JSExercises from './_exercises/css4js.md'
