Docs: add frontend learning platforms links

--- a/src/pages/resources/test_your_skills.mdx
+++ b/src/pages/resources/test_your_skills.mdx
@@ -4,10 +4,16 @@ description: The best way to cement your skill is to test your knowledge in prac
 layout: ../../layouts/MainLayout.astro
 ---
 
+## Platforms for testing your skills
+
+import Platforms from '../resources/_exercises/frontend_platforms.md'
+
+<Platforms />
+
 ## Mocked interview
 
-- [Conner Ardman - React Coding Interview Ft. Clément Mihailescu (build the wordle clone)](https://www.youtube.com/watch?v=5xf4_Kx7azg)
-  - [Used API (if someone wants to recreate the task)](https://api.frontendexpert.io/api/fe/wordle-words)
+[Conner Ardman - React Coding Interview Ft. Clément Mihailescu (build the wordle clone)](https://www.youtube.com/watch?v=5xf4_Kx7azg)
+[Used API URL (if someone wants to recreate the task)](https://api.frontendexpert.io/api/fe/wordle-words)
 
 ## Mocked interview in Polish
 
