--- a/src/pages/software/vscode.mdx
+++ b/src/pages/software/vscode.mdx
@@ -83,7 +83,7 @@ SonarLint is an IDE extension that helps you detect and fix quality issues as yo
 
 ### Utility
 
-### Output colorizer
+#### Output colorizer
 
 Easier to analyze git errors or other errors visible in the vscode output tab
 
