feat(vscode): added console ninja extension

--- a/src/pages/software/vscode.mdx
+++ b/src/pages/software/vscode.mdx
@@ -113,6 +113,12 @@ Visual Studio Code plugin that autocompletes filenames
 
 [VS Marketplace Link](https://marketplace.visualstudio.com/items?itemName=christian-kohler.path-intellisense)
 
+#### Console Ninja
+
+Console Ninja is a free extension that puts your console.logs and runtime errors right into your VS Code.
+
+[VS Marketplace Link](https://marketplace.visualstudio.com/items?itemName=WallabyJs.console-ninja)
+
 #### VSCode Git Commit Message
 
 Harmonize your git commit message with your colleagues
