feat(test_your_skills): added new links & reformatted the "used api url" link

--- a/src/pages/resources/test_your_skills.mdx
+++ b/src/pages/resources/test_your_skills.mdx
@@ -12,9 +12,8 @@ import Platforms from '../resources/_exercises/frontend_platforms.md'
 
 ## Mocked interview
 
-[Conner Ardman - React Coding Interview Ft. Clément Mihailescu (build the wordle clone)](https://www.youtube.com/watch?v=5xf4_Kx7azg)
-
-[Used API URL (if someone wants to recreate the task)](https://api.frontendexpert.io/api/fe/wordle-words)
+- [Conner Ardman - React Coding Interview Ft. Clément Mihailescu (build the wordle clone)](https://www.youtube.com/watch?v=5xf4_Kx7azg)
+- - [Used API URL (if someone wants to recreate the task)](https://api.frontendexpert.io/api/fe/wordle-words)
 
 ## Mocked interview in Polish
 
@@ -32,7 +31,9 @@ import CSSQuestions from './_questions/css.md'
 - [Chris Hansen - Master Frontend Development 💻 By Cloning These Websites 💯](https://www.dev.to/hyggedev/master-frontend-development-by-cloning-these-websites-1m08)
 - [25 Extremely Modern Layouts Using CSS Grid✨ (try to recreate them!)](https://dev.to/preethi_dev/25-extremely-modern-layouts-using-css-grid-10ek)
 
+
 <CSS4JSExercises />
+
 <PracticeCSSProblems />
 <CSSQuestions />
 
@@ -56,6 +57,9 @@ import TypeScriptQuestions from './_questions/typescript.md'
 ## React
 
 import ReactQuestions from './_questions/react.md'
+
+- [Web Dev Cody - The most challenging React problem on my channel](https://www.youtube.com/watch?v=5wdVBpLh-Y4)
+- [Josh tries coding - 5 Amazing Open-Source React Projects to Learn From](https://www.youtube.com/watch?v=RvyCAdDmFaw)
 
 <ReactQuestions />
 
